--- a/k8s/k3d/dashboard/admin-rbac.yaml
+++ b/k8s/k3d/dashboard/admin-rbac.yaml
@@ -1,18 +1,22 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: admin-user
+  labels:
+    k8s-app: kubernetes-dashboard
+  name: dashboard-admin
   namespace: kubernetes-dashboard
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: admin-user
+  name: dashboard-admin-bind-cluster-role
+  labels:
+    k8s-app: kubernetes-dashboard
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: cluster-admin
 subjects:
 - kind: ServiceAccount
-  name: admin-user
+  name: dashboard-admin
   namespace: kubernetes-dashboard
