--- a/k8s/k3d/dashboard/ingress.yaml
+++ b/k8s/k3d/dashboard/ingress.yaml
@@ -11,8 +11,7 @@ spec:
     - leson.com
     secretName: kubernetes-dashboard-certs
   rules:
-  - host: leson.com
-    http:
+  - http:
       paths:
       - path: /
         pathType: Prefix
