--- a/k8s/k3d/dashboard/ingress.yaml
+++ b/k8s/k3d/dashboard/ingress.yaml
@@ -3,7 +3,8 @@ kind: Ingress
 metadata:
   name: dashboard-ingress
   annotations:
-    ingress.kubernetes.io/protocol: "https"
+    # ingress.kubernetes.io/protocol: "https"
+    ingress.kubernetes.io/ssl-redirect: "false"
   namespace: kubernetes-dashboard
 spec:
   tls:
